# oxidized_canvas

./: .gitignore  Cargo.toml  README.md  dockerfile  justfile  nixpacks.toml  package-lock.json  package.json  tailwind.config.js  todo.md
.github/workflows/: ci.yaml
assets/static/: site.webmanifest
assets/static/css/: styles.css
assets/views/: base.html
assets/views/arts/: create.html  edit.html  infinite.html  list.html  show.html  show_mix.html
assets/views/backoffice/: art.html  arts.html  base.html  dashboard.html  login.html  mix.html  mixes.html
config/: development.yaml  test.yaml
examples/: anthropic_example.rs  bfl_example.rs  google_example.rs  openai_example.rs  playground.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20241007_173307_arts.rs  m20250828_101518_add_model_to_arts.rs  m20250830_091407_mixes.rs  m20250830_092716_mixarts.rs
src/: app.rs  errors.rs  lib.rs
src/common/: settings.rs
src/controllers/: arts.rs  auth.rs  backoffice.rs  mixes.rs  mod.rs  utils.rs
src/initializers/: mod.rs  realtime.rs  view_engine.rs
src/models/: arts.rs  mixarts.rs  mixes.rs  mod.rs  users.rs
src/services/: art_service.rs  backoffice_auth.rs  mod.rs  providers.rs  realtime.rs  service_provider.rs
src/tasks/: art_prompts.rs  clean_titles.rs  create_art.rs  import_arts.rs  mod.rs  replace_art.rs
src/views/: arts.rs  backoffice.rs  mixes.rs  mod.rs
tests/: mod.rs
tests/models/: arts.rs  mod.rs  users.rs
tests/requests/: auth.rs  backoffice.rs  mixes.rs  mod.rs  prepare_data.rs  user.rs
tests/tasks/: clean_titles.rs  create_art.rs  import_arts.rs  mod.rs  seed.rs
(+20 files in other folders)
