[workspace]

[package]
name = "oxidized_canvas"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "oxidized_canvas-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

loco-rs = { version = "0.13.2" }
migration = { path = "migration" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.33.0", default-features = false }
async-trait = "0.1.74"
tracing = "0.1.40"
chrono = "0.4"
validator = { version = "0.18" }
axum-test = { version = "16" }
sea-orm = { version = "1.0.0", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }

axum = "0.7.5"
include_dir = "0.7"
uuid = { version = "1.6.0", features = ["v4"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

# view engine i18n
fluent-templates = { version = "0.8.0", features = ["tera"] }
unic-langid = "0.9.4"
# /view engine

ureq = { version = "2.10.1", features = ["json"] }
thiserror = "1.0.64"
async-std = "1.13.0"
image = "0.25.2"
base64 = "0.22.1"
anthropic = "0.0.8"
regex = "1.11.0"
sitemap-rs = "0.2.2"
fastrand = "2.3.0"

[[bin]]
name = "oxidized_canvas-cli"
path = "src/bin/main.rs"
required-features = []

[[bin]]
name = "tool"
path = "src/bin/tool.rs"
required-features = []

[dev-dependencies]
serial_test = "3.1.1"
rstest = "0.21.0"
loco-rs = { version = "0.13.2", features = ["testing"] }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
